Posts comp renders, postsSlice + fetchPosts made

--- a/src/containers/Subreddits/subreddits.css
+++ b/src/containers/Subreddits/subreddits.css
@@ -6,3 +6,9 @@
 .Subreddit-individual {
     margin: 10px 0;
 }
+
+.Subreddit-individual button:hover {
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+}
