--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,4 +1,41 @@
 .Post-individual {
-    margin: 30px 0;
+    margin: 10px auto;
+    width: 95%;
     border: 2px solid green;
+    background-color: var(--secondary-color);
+}
+
+.post-no-comments {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    column-gap: 5px;
+}
+
+.post-karma {
+    border: 1px solid black;
+    box-shadow: 2px 2px grey;
+    margin: 5px;
+    text-align: center;
+}
+
+.vote-icon {
+    font-size: 1.5rem;
+}
+
+.post-title {
+    overflow: hidden;
+    text-align: center;
+}
+
+.post-img {
+    overflow: hidden;
+} 
+
+.post-img img {
+    display: block;
+    margin: 0 auto;
+}
+
+.post-comments {
+    text-align: center;
 }
