--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,5 +1,6 @@
 .Post-individual {
     margin: 10px auto;
+    padding: 10px;
     width: 95%;
     border: 2px solid green;
     background-color: var(--secondary-color);
@@ -8,14 +9,23 @@
 .post-no-comments {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    column-gap: 5px;
+    column-gap: 10px;
 }
 
 .post-karma {
+    width: 65%;
+    justify-self: center;
+    
+    height: 100px;
+    align-self: center;
+
     border: 1px solid black;
     box-shadow: 2px 2px grey;
-    margin: 5px;
-    text-align: center;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .vote-icon {
