--- a/src/containers/Subreddits/subreddits.css
+++ b/src/containers/Subreddits/subreddits.css
@@ -1,14 +1,53 @@
 .Subreddits-container {
-    text-align: center;
     border: 1px solid blue;
 }
 
-.Subreddit-individual {
-    margin: 10px 0;
+.subreddit-individual {
+    margin: 10px 5px;
+    border: .5px black solid;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10%;
+    display: flex;
 }
 
-.Subreddit-individual button:hover {
-    text-decoration: underline;
-    color: blue;
+/*
+.subreddit-individual img {
+    margin-right: 5px;
+    height: 50px;
+    border-radius: 50%;
+    border: black 2px solid;
+} */
+
+.sub-button-img {
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+    flex-shrink: 0;
+
+    border-radius: 20%;
+    border: black 2px solid;
+    
+    background-position: center;
+    background-size: cover;
+    background-color: var(--secondary-color);
+}
+
+.sub-button-img:hover {
+    cursor: pointer;
+}
+
+.sub-button-text {
+    font-family: var(--nunito-font);
+    font-weight: 700;
+    font-size: 1.25rem;
+    
+    background-color: white;
+    border: none;
+}
+
+.sub-button-text:hover {
+    text-decoration: underline dashed black;
+    color: grey;
     cursor: pointer;
 }
