Up/down vote arrows change color and affect score

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -28,7 +28,11 @@
     justify-content: space-around;
 }
 
-.vote-icon {
+.vote-icon-up {
+    font-size: 1.5rem;
+}
+
+.vote-icon-down {
     font-size: 1.5rem;
 }
 
