--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -1,3 +1,8 @@
 .Comment-individual {
-    margin: 4px;
+    margin: 20px 30px;
+    overflow: hidden;
+}
+
+.Comment-individual hr {
+    width: 80%;
 }
