--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -2,8 +2,8 @@
     margin: 10px auto;
     padding: 10px;
     width: 95%;
-    border: 2px solid green;
-    background-color: var(--secondary-color);
+    border: 2px solid black;
+    background-color: var(--primary-color);
 }
 
 .post-no-comments {
@@ -19,6 +19,7 @@
     height: 100px;
     align-self: center;
 
+    background-color: var(--tertiary-color);
     border: 1px solid black;
     box-shadow: 2px 2px grey;
     
@@ -39,6 +40,9 @@
 .post-title {
     overflow: hidden;
     text-align: center;
+    margin: auto 0;
+
+    font-size: 1.25rem;
 }
 
 .post-img {
@@ -48,8 +52,23 @@
 .post-img img {
     display: block;
     margin: 0 auto;
+
+    height: auto;
+    width: 60%;
 }
 
 .post-comments {
     text-align: center;
+    font-family: var(--nunito);
+}
+
+.post-comments button{
+    font-family: var(--nunito);
+    background-color: var(--tertiary-color);
+
+    margin-bottom: 5px;
+
+    border: .5px solid black;
+    height: 24px;
+    border-radius: 2px;
 }
