--- a/src/containers/Posts/posts.css
+++ b/src/containers/Posts/posts.css
@@ -1,3 +1,5 @@
 .Posts-container {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
+    max-width: 100%;
+    overflow: hidden;
 }
