--- a/src/containers/Subreddits/subreddits.css
+++ b/src/containers/Subreddits/subreddits.css
@@ -1,10 +1,10 @@
 .Subreddits-container {
-    border: 1px solid blue;
+    border-right: 3px solid black;
+    background-color: var(--primary-color);
 }
 
 .subreddit-individual {
     margin: 10px 5px;
-    border: .5px black solid;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10%;
@@ -20,8 +20,8 @@
 } */
 
 .sub-button-img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-right: 5px;
     flex-shrink: 0;
 
@@ -30,7 +30,7 @@
     
     background-position: center;
     background-size: cover;
-    background-color: var(--secondary-color);
+    background-color: var(--tertiary-color);
 }
 
 .sub-button-img:hover {
@@ -40,9 +40,9 @@
 .sub-button-text {
     font-family: var(--nunito-font);
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 1rem;
     
-    background-color: white;
+    background-color: var(--primary-color);
     border: none;
 }
 
@@ -50,4 +50,18 @@
     text-decoration: underline dashed black;
     color: grey;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 480px) {
+    .subreddit-individual {
+        padding-left: 2%;
+    }
+
+    .sub-button-text {
+        font-size: 1rem;
+    }
+    
+    .sub-button-img {
+        display: none;
+    }
 }
