--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,11 +1,19 @@
 .header {
-    border: 1px black solid;
+    border-bottom: 3px black solid;
     height: 100px;
     text-align: center;
+    margin-top: 10px;
+
+    background-color: var(--tertiary-color);
 }
   
 .header h1 {
-    font-size: 1em;
+    font-size: 1.25em;
+    font-weight: 700;
+}
+
+.header h1 span {
+    color: red;
 }
   
 .header ul {
@@ -20,7 +28,7 @@
 }
 
 .header-search-bar {
-    margin-top: 10px;
+    margin-top: 30px;
     font-family: var(--nunito-font);
 }
 
@@ -30,6 +38,12 @@
 
 .search-buttons {
     font-family: var(--nunito-font);
+    background-color: var(--tertiary-color);
+    border: .5px solid black;
+    
+    margin-left: 2px;
+    height: 24px;
+    border-radius: 2px;
 }
 
 
