--- a/src/containers/Posts/posts.css
+++ b/src/containers/Posts/posts.css
@@ -3,3 +3,14 @@
     max-width: 100%;
     overflow: hidden;
 } 
+
+/* MEDIA SECTION */
+@media only screen and (max-width: 768px) {
+    .Posts-container {
+        padding: 5px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    
+}
