--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -6,9 +6,13 @@
     background-color: var(--primary-color);
 }
 
+.Post-individual:hover {
+    box-shadow: 2px 2px black;
+}
+
 .post-no-comments {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 10px;
     align-items: center;
 }
@@ -66,11 +70,15 @@
     font-family: var(--nunito);
     background-color: var(--tertiary-color);
 
-    margin-bottom: 5px;
+    margin: 5px 0;
 
     border: .5px solid black;
     height: 24px;
     border-radius: 2px;
+}
+
+.comments-loading {
+    font-size: 1rem;
 }
 
 
@@ -78,7 +86,7 @@
 @media only screen and (max-width: 768px) {
     .Post-individual {
         border: 1px solid black;
-        margin: 3px auto;
+        margin: 5px auto;
     }
     
     .post-no-comments {
@@ -126,6 +134,10 @@
     .post-comments button{
         font-size: .6rem;
         height: 15px;
+    }
+
+    .comments-loading {
+        font-size: .6rem;
     }
 }
 
