--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -48,9 +48,15 @@
 
 /* MEDIA SECTION */
 @media only screen and (max-width: 768px) {
-
+    .search-buttons {
+        color: black;
+        border-radius: 2px;
+    }
 }
 
 @media only screen and (max-width: 480px) {
-
+    .search-buttons {
+        color: black;
+        border-radius: 2px;
+    }
 }
