--- a/src/containers/Posts/posts.css
+++ b/src/containers/Posts/posts.css
@@ -2,6 +2,7 @@
     background-color: var(--secondary-color);
     max-width: 100%;
     overflow: hidden;
+    padding-right: 5px;
 } 
 
 .Posts-container .sub-title {
