--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -50,13 +50,15 @@
 @media only screen and (max-width: 768px) {
     .search-buttons {
         color: black;
-        border-radius: 2px;
+        border-radius: 1px;
+        font-weight: 400;
     }
 }
 
 @media only screen and (max-width: 480px) {
     .search-buttons {
         color: black;
-        border-radius: 2px;
+        border-radius: 1px;
+        font-weight: 400;
     }
 }
