--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -172,3 +172,9 @@
         border-radius: 2px;
     }
 }
+
+@media only screen and (max-width: 380px) {
+    .post-karma h1 {
+        font-size: .4rem;
+    }
+}
