Installed moment. Images now ref'd by post.url

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -66,6 +66,10 @@
     font-family: var(--nunito);
 }
 
+/* .post-comments span{
+   
+} */
+
 .post-comments button{
     font-family: var(--nunito);
     background-color: var(--tertiary-color);
