--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -73,4 +73,14 @@
     .search-buttons {
        font-size: .6rem;
     }
+
+    #search-btn {
+        border-radius: 3px;
+        border: .5px solid black;
+    }
+
+    #clear-btn {
+        border-radius: 3px;
+        border: .5px solid black;
+    }
 }
